Fix checkbox alignment issue in FF and Chrome

--- a/app/assets/stylesheets/foundation_enhancements/radio-buttons.scss
+++ b/app/assets/stylesheets/foundation_enhancements/radio-buttons.scss
@@ -8,6 +8,8 @@ input[type='radio'] {
 
 .blocked-radio-buttons {
   ul.large-block-grid-3 {
-    margin-bottom: -1.25em;
+    li.radio {
+      padding-bottom: 0;
+    }
   }
 }
